# ChangeLog for net-misc/stunnel
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/stunnel/ChangeLog,v 1.222 2015/04/27 00:28:08 blueness Exp $

  27 Apr 2015; Anthony G. Basile <blueness@gentoo.org> -stunnel-5.15.ebuild,
  stunnel-5.08.ebuild:
  Drop all but necessary KEYWORDS on vulnerable version.

*stunnel-5.16-r1 (27 Apr 2015)

  27 Apr 2015; Anthony G. Basile <blueness@gentoo.org> +stunnel-5.16-r1.ebuild,
  -stunnel-5.16.ebuild:
  CONFIG_PROTECT stunnel.conf.  Bug #547422.

  21 Apr 2015; Jeroen Roovers <jer@gentoo.org> stunnel-5.14.ebuild:
  Stable for HPPA (bug #546908).

*stunnel-5.16 (20 Apr 2015)

  20 Apr 2015; Anthony G. Basile <blueness@gentoo.org> +stunnel-5.16.ebuild:
  Version bump.

  19 Apr 2015; Agostino Sarubbo <ago@gentoo.org> stunnel-5.14.ebuild:
  Stable for x86, wrt bug #546908

  19 Apr 2015; Agostino Sarubbo <ago@gentoo.org> stunnel-5.14.ebuild:
  Stable for amd64, wrt bug #546908

  18 Apr 2015; Anthony G. Basile <blueness@gentoo.org> stunnel-5.14.ebuild:
  Stable on arm, ppc, ppc64.  Bug #546908.

  17 Apr 2015; Anthony G. Basile <blueness@gentoo.org> -files/stunnel.initd,
  -stunnel-5.07.ebuild, -stunnel-5.09.ebuild, -stunnel-5.10.ebuild,
  -stunnel-5.11.ebuild:
  Cleanup older versions.

*stunnel-5.15 (17 Apr 2015)

  17 Apr 2015; Anthony G. Basile <blueness@gentoo.org> +stunnel-5.15.ebuild:
  Version bump.

*stunnel-5.14 (26 Mar 2015)

  26 Mar 2015; Anthony G. Basile <blueness@gentoo.org> +stunnel-5.14.ebuild,
  -stunnel-5.13.ebuild:
  Following upstream's rapid releases.

  20 Mar 2015; Anthony G. Basile <blueness@gentoo.org> ChangeLog:
  Fix failed gpg signature.

*stunnel-5.13 (20 Mar 2015)

  20 Mar 2015; Anthony G. Basile <blueness@gentoo.org> +stunnel-5.13.ebuild,
  -stunnel-5.12.ebuild:
  Follow upstream's rapid version bump.

  19 Mar 2015; Anthony G. Basile <blueness@gentoo.org> ChangeLog:
  Fix failed gpg signiture

*stunnel-5.12 (19 Mar 2015)
