@@ -4,10 +4,10 @@ DESCRIPTION=TLS/SSL - Port Wrapper
 EAPI=5
 HOMEPAGE=http://www.stunnel.org/index.html
 IUSE=ipv6 selinux tcpd ssl
-KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~s390 ~sparc ~x86 ~amd64-linux ~arm-linux ~x86-linux ~ppc-macos ~x86-macos
+KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sparc ~x86 ~amd64-linux ~arm-linux ~x86-linux ~ppc-macos ~x86-macos
 LICENSE=GPL-2
 RDEPEND=tcpd? ( sys-apps/tcp-wrappers ) dev-libs/openssl:= selinux? ( sec-policy/selinux-stunnel )
 SLOT=0
 SRC_URI=ftp://ftp.stunnel.org/stunnel/archive/5.x/stunnel-5.16.tar.gz http://www.usenix.org.uk/mirrors/stunnel/archive/5.x/stunnel-5.16.tar.gz http://ftp.nluug.nl/pub/networking/stunnel/archive/5.x/stunnel-5.16.tar.gz http://www.namesdir.com/mirrors/stunnel/archive/5.x/stunnel-5.16.tar.gz http://stunnel.cybermirror.org/archive/5.x/stunnel-5.16.tar.gz http://mirrors.zerg.biz/stunnel/archive/5.x/stunnel-5.16.tar.gz ftp://mirrors.go-parts.com/stunnel/archive/5.x/stunnel-5.16.tar.gz
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	ssl-cert	b53367370fde96e19beca78050a47c61	systemd	090342761f573a8280dd5aa6b0345f3b	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92	user	f54e098dd38ba1c0847a13e685b87747
-_md5_=509d4f3424090699a7e8a0f42ed4da6b
+_md5_=f84cbf628cfefd19012985898383039d
