@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/stunnel
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/stunnel/ChangeLog,v 1.222 2015/04/27 00:28:08 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/stunnel/ChangeLog,v 1.223 2015/04/27 02:50:36 blueness Exp $
+
+  27 Apr 2015; Anthony G. Basile <blueness@gentoo.org> stunnel-5.16-r1.ebuild:
+  Add libdir love for mips.
 
   27 Apr 2015; Anthony G. Basile <blueness@gentoo.org> -stunnel-5.15.ebuild,
   stunnel-5.08.ebuild:
